Fix fake text input on mobile

--- a/src/landing/Landing.css
+++ b/src/landing/Landing.css
@@ -98,7 +98,7 @@
 
 @media screen and (max-width: 560px) {
     .landing-wrapper {
-        padding: 0;
+        padding: 3em 0 0 0;
         margin: 0;
     }
 
